--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <body>
   <div class="container">
     <header class="cabecalho">
@@ -68,3 +69,4 @@
     </main>
   </div>
 </body>
+    </html>
